# synthflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: api_aggregation_demo.py  deepseek_streaming_demo.py  execution_context_demo.py  fastapi_chat_sse_demo.py  general_pipeline.py  github_trending_demo.py  graphviz_export_demo.py  order_fulfillment_demo.py  type_validation_demo.py
synthflow/core/: condition.py  datastore.py  dsl.py  flow.py  node.py  parallel.py
synthflow/execution/: __init__.py  context.py  engine.py  scheduler.py
synthflow/plugins/: __init__.py  cache.py  retry.py  timeout.py
synthflow/runtime/: __init__.py  models.py  store.py
synthflow/types/: __init__.py  field.py  schema.py  validator.py
synthflow/utils/: inspect.py
synthflow/visualization/: __init__.py  graphviz.py  printer.py
tests/: test_core_behaviors.py  test_execution_engine.py  test_graphviz_output.py  test_result_ref.py  test_types_validation.py
